# TemporalConvolutionTBC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TemporalConvolutionTBC.cpp  TemporalConvolutionTBC.lua  ffi.lua  init.lua
lib/: CMakeLists.txt  TemporalConvolutionTBC.cpp  TemporalConvolutionTBC.cu  TemporalConvolutionTBC.cuh  init.cpp  init_cuda.cpp  init_cuda.cu
lib/generic/: TemporalConvolutionTBC.cpp  TemporalConvolutionTBCHost.cpp  TemporalConvolutionTBCHost.cu
