CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
IF(LUAROCKS_PREFIX)
  MESSAGE(STATUS "Installing Torch-TBC through Luarocks")
  STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
  MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()

FIND_PACKAGE(Torch REQUIRED)

ADD_SUBDIRECTORY(lib)

FILE(GLOB luasrc *.lua)
SET(PACKAGE tbc)
INSTALL(FILES ${luasrc} DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/${PACKAGE})
