set(SRC init.cpp)

add_library(THTBC MODULE ${SRC}) # module for mac os x support
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET_TARGET_PROPERTIES(THTBC PROPERTIES
      PREFIX "lib"
      IMPORT_PREFIX "lib")

INSTALL(TARGETS THTBC
  RUNTIME DESTINATION ${Torch_INSTALL_LUA_CPATH_SUBDIR}
  LIBRARY DESTINATION ${Torch_INSTALL_LUA_CPATH_SUBDIR})
  